--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="portfoli.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body><fieldset class="fieldset">
     <legend><h1 class="qui">Qui suis-je ?</h1></legend>
