--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <p class="res">Je suis un étudiant en Génie Informatique à l'Université Privée de Fès, passionné par le développement et les nouvelles technologies. Actuellement, je me prépare à intégrer la 2ᵉ année des classes préparatoires intégrées. Curieux et motivé, j’aime apprendre de manière autonome, relever de nouveaux défis et développer mes compétences à travers des projets concrets. Mon objectif est de gagner en expérience et de contribuer activement à des projets innovants.
 <div class="profile">
         <a href="https://www.linkedin.com/in/mourad-el-kassmi-395638331/" target="_blank">
-    <img src="linkedin.jpeg" alt="linkedin profile" style="width: 20px;">
+    <img src="images/linkedin.jpeg" alt="linkedin profile" style="width: 20px;">
 </a>
 <a href="https://github.com/mouradqw?tab=overview&from=2025-07-01&to=2025-07-07" target="_blank">
-    <img src="github1.jpeg" alt="compte de github" style="width: 20px;">
+    <img src="images/github1.jpeg" alt="compte de github" style="width: 20px;">
 </a>
 </div>
 </p></fieldset>
@@ -25,11 +25,11 @@
 <h3 class="comptr">MES COMPÉTENCES</h3>
 </legend>
 
-<img class="css"  src="css.png" alt="je maitraise la langue css">
-<img class="html" src="html.png" alt="je maitraise la langue html">
-<img class="python" src="langue python.jpeg" alt="je maitraise la langue python">
-<img class="matlab" src="matlab.jpeg" alt="je maitraise la langue matlab">
-<img class="c" src="languec.png" alt="je matraise la langue c">
+<img class="css"  src="images/css.png" alt="je maitraise la langue css">
+<img class="html" src="images/html.png" alt="je maitraise la langue html">
+<img class="python" src="images/langue python.jpeg" alt="je maitraise la langue python">
+<img class="matlab" src="images/matlab.jpeg" alt="je maitraise la langue matlab">
+<img class="c" src="images/languec.png" alt="je matraise la langue c">
 </fieldset>
 <fieldset>
 <legend><h2 class="lic">Licences et certifications</h2>
