--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 <img class="css"  src="images/css.png" alt="je maitraise la langue css">
 <img class="html" src="images/html.png" alt="je maitraise la langue html">
-<img class="python" src="images/langue python.jpeg" alt="je maitraise la langue python">
+<img class="python" src="images/langue-python.jpeg" alt="je maitraise la langue python">
 <img class="matlab" src="images/matlab.jpeg" alt="je maitraise la langue matlab">
-<img class="c" src="images/languec.png" alt="je matraise la langue c">
+<img class="c" src="images/langue-c.png" alt="je matraise la langue c">
 </fieldset>
 <fieldset>
 <legend><h2 class="lic">Licences et certifications</h2>
